--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       matrix:
         zig-version: ["master", "0.13.0"]
         os: [ubuntu-latest, macos-latest, windows-latest]
+        optimize: [ReleaseSafe, ReleaseFast]
         build-options: ["-Dlto"]
 
     runs-on: ${{ matrix.os }}
@@ -33,7 +34,7 @@ jobs:
           use-cache: false
 
       - name: Run `build`
-        run: zig build ${{ matrix.build-options }} --summary all
+        run: zig build ${{ matrix.build-options }} -Doptimize=${{ matrix.optimize }} --summary all
 
   test:
     strategy:
