--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ci]
+    branches: [main]
 
   pull_request:
-    branches: [ci]
+    branches: [main]
 
   workflow_dispatch:
 
