--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,5 +57,8 @@ jobs:
           version: ${{ matrix.zig-version }}
           use-cache: false
 
+      - name: Run `Test`
+        run: zig build test --summary all
+
       - name: Install `Test`
         run: zig build install-test --summary all
