CI: Add workflow test for allyourcodebase/lmdb#3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
       - name: Run `build`
         run: zig build ${{ matrix.build-options }} -Doptimize=${{ matrix.optimize }} --summary all
 
+      # Test allyourcodebase/lmdb#3
+      - name: Run `build tools`
+        run: zig build tools -Dtarget=x86_64-macos-none --summary all
+        run: zig build tools -Dtarget=x86_64-windows-gnu --summary all
+
   test:
     strategy:
       fail-fast: false
