--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,11 @@ on:
     branches: [main]
 
   pull_request:
-    branches: [main]
+    paths:
+      - ".github/workflows/ci.yml"
+      - "include/**"
+      - "build.zig"
+      - "build.zig.zon"
 
   workflow_dispatch:
 
